results/SVCOMP/4-shot/log-ExSymExeResearch-2024_03_18_22_05_12.txt
class Main {

  //@ requires arg >= Integer.MIN_VALUE && arg <= Integer.MAX_VALUE;
  //@ ensures \result <==> (arg > 0 ? arg : -arg) + 5 != test((arg > 0 ? arg : -arg), 5);
  public static boolean f(int arg) {
    int x = arg > 0 ? arg : -arg;
    int y = 5;
    Main inst = new Main();
    return inst.test(x, y) != x + y;
  }

  //@ requires a >= 0 && a < 100 && b >= 0 && b < 100;
  //@ ensures \result == (\max int a, b; a >= 0 && a < 100 && b >= 0 && b < 100; a + b > 0 ? (a < (a - b) ? a : (a - b)) : (b < (a - b) ? b : (a - b)));
  public int test(int a, int b) { // invokevirtual
    int result = 0;
    if (a >= 0 && a < 100 && b >= 0 && b < 100) {
      int sum = a + b;
      int diff = a - b;
      int temp;

      if (sum > 0) temp = a;
      else temp = b;
      if (temp < diff) result = temp;
      else result = diff;
    }
    return result;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeResearch.java:4: error: non-static method test(int,int) cannot be referenced from a static context
  //@ ensures \result <==> (arg > 0 ? arg : -arg) + 5 != test((arg > 0 ? arg : -arg), 5);
                                                         ^
/home/max/Documents/JMLGPT/tmp/ExSymExeResearch.java:13: error: variable a is already defined in method test(int,int)
  //@ ensures \result == (\max int a, b; a >= 0 && a < 100 && b >= 0 && b < 100; a + b > 0 ? (a < (a - b) ? a : (a - b)) : (b < (a - b) ? b : (a - b)));
                                   ^
/home/max/Documents/JMLGPT/tmp/ExSymExeResearch.java:13: error: variable b is already defined in method test(int,int)
  //@ ensures \result == (\max int a, b; a >= 0 && a < 100 && b >= 0 && b < 100; a + b > 0 ? (a < (a - b) ? a : (a - b)) : (b < (a - b) ? b : (a - b)));
                                      ^
3 errors

